[#107] overflow bug fix

--- a/Admin/adminpage/static/style/ondemand.scss
+++ b/Admin/adminpage/static/style/ondemand.scss
@@ -426,6 +426,8 @@ a{
         }
 
         .preview{
+            max-height: 80%;
+            overflow-y: scroll;
             .list{
                 &_item{
                     display: flex;
